[package]
name = "poligon"
version = "2.0.0"
edition = "2024"
build = "build.rs"

[dependencies]
eframe = "0.27"
egui = "0.27"
rodio = "0.17"
image="0.24"
rand = "0.8"
once_cell = "1.18"

[build-dependencies]
embed-resource = "2.4"

[profile.release]
opt-level = "z"
strip = true
lto = true

[package.metadata.winres]
windows_subsystem = "windows"